--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -4,9 +4,9 @@
 [parameters]
     database_driver   = pdo_mysql
     database_host     = localhost
-    database_name     = symfony
+    database_name     = profiles
     database_user     = root
-    database_password =
+    database_password = 280877
 
     mailer_transport  = smtp
     mailer_host       = localhost
@@ -15,4 +15,4 @@
 
     locale            = en
 
-    secret            = ThisTokenIsNotSoSecretChangeIt
+    secret            = "b9c5f096fad5c19f5ac106b4bc3eaa610c" 
