--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,5 @@
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #   prefix:   /_internal
+profiles:
+  resource: "@ProfilesBundle/Resource/config/routing/internal.xml"
