--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -23,3 +23,12 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /change-password
+    
+_security_check:
+    pattern:  /login_check
+_security_logout:
+    pattern:  /logout    
+
+_facebook_secured:
+      pattern: /secured/
+      defaults: { _controller: AcmeDemoBundle:Welcome:index }
